--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "motion": "^12.23.12",
     "next": "15.4.6",
